force-app/main/default/objects/Exercise_c__x/Exercise_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>Exercise_Salesforce</externalDataSource>
    <externalName>Exercise__c</externalName>
    <label>Exercise (External)</label>
    <pluralLabel>Exercise (External)</pluralLabel>
</CustomObject>