force-app/main/default/objects/Exercise_c__x/fields/Average_Heart_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Average_Heart_Rate_c__c</fullName>
    <externalDeveloperName>Average_Heart_Rate__c</externalDeveloperName>
    <label>Average Heart Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>