force-app/main/default/objects/Exercise_c__x/fields/Bad_HR_Data_c__c.field-meta.xml
<CustomField>
    <fullName>Bad_HR_Data_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Bad_HR_Data__c</externalDeveloperName>
    <label>Bad HR Data?</label>
    <type>Checkbox</type>
</CustomField>