force-app/main/default/objects/Exercise_c__x/fields/Date_c__c.field-meta.xml
<CustomField>
    <fullName>Date_c__c</fullName>
    <externalDeveloperName>Date__c</externalDeveloperName>
    <label>Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>