force-app/main/default/objects/Exercise_c__x/fields/Day_c__c.field-meta.xml
<CustomField>
    <fullName>Day_c__c</fullName>
    <externalDeveloperName>Day__c</externalDeveloperName>
    <label>Day</label>
    <length>18</length>
    <referenceTargetField>Day__c.External_Day_SFID__c</referenceTargetField>
    <referenceTo>Day__c</referenceTo>
    <relationshipLabel>Exercise (External Record)</relationshipLabel>
    <relationshipName>Exercise_outside</relationshipName>
    <type>IndirectLookup</type>
</CustomField>