force-app/main/default/objects/Exercise_c__x/fields/Distance_Miles_c__c.field-meta.xml
<CustomField>
    <fullName>Distance_Miles_c__c</fullName>
    <externalDeveloperName>Distance_Miles__c</externalDeveloperName>
    <label>Distance (Miles)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>