force-app/main/default/objects/Exercise_c__x/fields/Duration_Minutes_c__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes_c__c</fullName>
    <externalDeveloperName>Duration_Minutes__c</externalDeveloperName>
    <label>Duration (Minutes)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>