force-app/main/default/objects/Exercise_c__x/fields/Elevation_Gain_Feet_c__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Gain_Feet_c__c</fullName>
    <externalDeveloperName>Elevation_Gain_Feet__c</externalDeveloperName>
    <label>Elevation Gain (Feet)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>