force-app/main/default/objects/Exercise_c__x/fields/Elevation_Gain_per_Mile_c__c.field-meta.xml
<CustomField>
    <fullName>Elevation_Gain_per_Mile_c__c</fullName>
    <externalDeveloperName>Elevation_Gain_per_Mile__c</externalDeveloperName>
    <label>Elevation Gain per Mile</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Number</type>
</CustomField>