force-app/main/default/objects/Exercise_c__x/fields/Exercise_18_Character_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Exercise_18_Character_ID_c__c</fullName>
    <externalDeveloperName>Exercise_18_Character_ID__c</externalDeveloperName>
    <label>Exercise 18 Character ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>