force-app/main/default/objects/Exercise_c__x/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsDeleted</externalDeveloperName>
    <label>Deleted</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>