force-app/main/default/objects/Exercise_c__x/fields/Notes_c__c.field-meta.xml
<CustomField>
    <fullName>Notes_c__c</fullName>
    <externalDeveloperName>Notes__c</externalDeveloperName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>