force-app/main/default/objects/Exercise_c__x/fields/Perceived_Level_of_Effort_c__c.field-meta.xml
<CustomField>
    <fullName>Perceived_Level_of_Effort_c__c</fullName>
    <externalDeveloperName>Perceived_Level_of_Effort__c</externalDeveloperName>
    <label>Perceived Level of Effort</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>