force-app/main/default/objects/Exercise_c__x/fields/Subtype_of_Activity_c__c.field-meta.xml
<CustomField>
    <fullName>Subtype_of_Activity_c__c</fullName>
    <externalDeveloperName>Subtype_of_Activity__c</externalDeveloperName>
    <label>Subtype of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trail Run</fullName>
            </value>
            <value>
                <fullName>Road Run</fullName>
            </value>
            <value>
                <fullName>Backpacking</fullName>
            </value>
            <value>
                <fullName>Hike</fullName>
            </value>
            <value>
                <fullName>Resort Skiing</fullName>
            </value>
            <value>
                <fullName>Backcountry Skiing</fullName>
            </value>
            <value>
                <fullName>Resort Uphilling</fullName>
            </value>
            <value>
                <fullName>Nordic Skiing</fullName>
            </value>
            <value>
                <fullName>Road Ride</fullName>
            </value>
            <value>
                <fullName>Mountain Bike Ride</fullName>
            </value>
            <value>
                <fullName>Pool Swim</fullName>
            </value>
            <value>
                <fullName>Open Water Swim</fullName>
            </value>
            <value>
                <fullName>Indoors - Bouldering</fullName>
            </value>
            <value>
                <fullName>Indoors - Ropes</fullName>
            </value>
            <value>
                <fullName>Outdoors - Cragging</fullName>
            </value>
            <value>
                <fullName>Outdoors - Multipitch</fullName>
            </value>
            <value>
                <fullName>Outdoors - Bouldering</fullName>
            </value>
            <value>
                <fullName>Treadmill</fullName>
            </value>
            <value>
                <fullName>Exercise Equipment</fullName>
            </value>
            <value>
                <fullName>Free Weights</fullName>
            </value>
            <value>
                <fullName>Mountaineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>