force-app/main/default/objects/Exercise_c__x/fields/Sweat_Rate_lt_hr_c__c.field-meta.xml
<CustomField>
    <fullName>Sweat_Rate_lt_hr_c__c</fullName>
    <externalDeveloperName>Sweat_Rate_lt_hr__c</externalDeveloperName>
    <label>Sweat Rate (lt / hr)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>