force-app/main/default/objects/Exercise_c__x/fields/tSS_Relative_Effort_c__c.field-meta.xml
<CustomField>
    <fullName>tSS_Relative_Effort_c__c</fullName>
    <externalDeveloperName>tSS_Relative_Effort__c</externalDeveloperName>
    <label>tSS / Relative Effort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>