force-app/main/default/objects/Exercise_c__x/fields/Type_of_Activity_c__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity_c__c</fullName>
    <externalDeveloperName>Type_of_Activity__c</externalDeveloperName>
    <label>Type of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Run</fullName>
            </value>
            <value>
                <fullName>Walk</fullName>
            </value>
            <value>
                <fullName>Hike</fullName>
            </value>
            <value>
                <fullName>Ski</fullName>
            </value>
            <value>
                <fullName>Climb</fullName>
            </value>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Swim</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Rowing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>