force-app/main/default/objects/Exercise_c__x/fields/Week_c__c.field-meta.xml
<CustomField>
    <fullName>Week_c__c</fullName>
    <externalDeveloperName>Week__c</externalDeveloperName>
    <label>Week</label>
    <length>18</length>
    <referenceTargetField>Week__c.External_Week_SFID__c</referenceTargetField>
    <referenceTo>Week__c</referenceTo>
    <relationshipLabel>Exercise (External Record)</relationshipLabel>
    <relationshipName>Exercise_outside</relationshipName>
    <type>IndirectLookup</type>
</CustomField>