force-app/main/default/objects/Exercise_c__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Date_c__c</columns>
    <columns>Day_c__c</columns>
    <columns>Distance_Miles_c__c</columns>
    <columns>Type_of_Activity_c__c</columns>
    <columns>Subtype_of_Activity_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>